ESP32/errors.txt
Arduino: 1.8.16 (Windows 10), Board: "ESP32S2 Dev Module, Disabled, Disabled, Disabled, UART0, Disabled, Default 4MB with spiffs (1.2MB APP/1.5MB SPIFFS), 240MHz (WiFi), QIO, 80MHz, 4MB (32Mb), 921600, None"

WARNING: library MIDIUSB claims to run on avr, sam, samd architecture(s) and may be incompatible with your current board which runs on esp32 architecture(s).
In file included from C:\Users\bleke\Documents\Arduino\libraries\USB-MIDI\src/USB-MIDI.h:26,
                 from C:\Users\bleke\Documents\Arduino\midi_examples\midi_test\midi_test.ino:21:
C:\Users\bleke\Documents\Arduino\libraries\MIDIUSB\src/MIDIUSB.h:18:2: error: #error MIDIUSB can only be used with an USB MCU.
 #error MIDIUSB can only be used with an USB MCU.
  ^~~~~
In file included from C:\Users\bleke\Documents\Arduino\libraries\USB-MIDI\src/USB-MIDI.h:26,
                 from C:\Users\bleke\Documents\Arduino\midi_examples\midi_test\midi_test.ino:21:
C:\Users\bleke\Documents\Arduino\libraries\MIDIUSB\src/MIDIUSB.h:78:2: error: #error "Unsupported architecture"
 #error "Unsupported architecture"
  ^~~~~
exit status 1
Error compiling for board ESP32S2 Dev Module.


This report would have more information with
"Show verbose output during compilation"
option enabled in File -> Preferences.

